--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
             </div>
         
             <!-- Impact Stop Sign Size -->
-            <div class="card shadow-sm rounded text-center p-3">
+            <div class="card shadow-sm rounded text-center p-3"  style="width: 250px;">
                 <h6>Impact Stop Sign Size</h6>
                 <div class="api-image-container" onclick="toggleApiImage(this)">
                   <img class="api-img img-front" src="images/aa_tool_experiments/impact_stop_sign_size/origin_bev.png" alt="Origin BEV">
@@ -849,7 +849,7 @@
             </div>
     
             <!-- Add Stop Sign -->
-            <div class="card shadow-sm rounded text-center p-3">
+            <div class="card shadow-sm rounded text-center p-3"  style="width: 250px;">
                 <h6>Add Stop Sign</h6>
                 <div class="api-image-container" onclick="toggleApiImage(this)">
                   <!-- Layer 1: Origin BEV -->
