--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
         
         <!-- 大卡片容器 -->
         <hr>
-        <div class="card shadow-sm rounded p-4 mb-5" style="background-color: #f7f7f7; width: 100%;">
+        <div class="card shadow-sm rounded p-4 mb-5 mx-auto" style="background-color: #f7f7f7; width: 100%; max-width: 1200px;">
           <h5 class="mb-4 fw-semibold">Stop Sign API</h5>
     
           <!-- 使用 d-flex 横向排列子卡片 -->
