--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
         <!-- Stop Sign API -->
         <hr>
         <h5 class="mb-4 fw-semibold">Stop Sign API</h5>
-        <div class="api-section-container d-grid" style="grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 1.5rem;">
+        <div class="api-section-container d-grid" style="grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 1.5rem; justify-content: start;">
           <div class="api-card card shadow-sm text-center p-3">
             <h6>Impact Stop Sign Distance</h6>
             <div class="api-image-container" onclick="toggleApiImage(this)">
@@ -817,7 +817,7 @@
         <!-- Traffic Light API -->
         <hr>
         <h5 class="mb-4 fw-semibold">Traffic Light API</h5>
-        <div class="api-section-container d-grid" style="grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 1.5rem;">
+        <div class="api-section-container d-grid" style="grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 1.5rem; justify-content: start;">
           <div class="api-card card shadow-sm text-center p-3">
             <h6>Impact Traffic Light Distance</h6>
             <div class="api-image-container" onclick="toggleApiImage(this)">
@@ -855,7 +855,7 @@
         <!-- Road API -->
         <hr>
         <h5 class="mb-4 fw-semibold">Road API</h5>
-        <div class="api-section-container d-grid" style="grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 1.5rem;">
+        <div class="api-section-container d-grid" style="grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 1.5rem; justify-content: start;">
           <div class="api-card card shadow-sm text-center p-3">
             <h6>Impact Road Heading</h6>
             <div class="api-image-container" onclick="toggleApiImage(this)">
@@ -885,7 +885,7 @@
         <!-- Lane API -->
         <hr>
         <h5 class="mb-4 fw-semibold">Lane API</h5>
-        <div class="api-section-container d-grid" style="grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 1.5rem;">
+        <div class="api-section-container d-grid" style="grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 1.5rem; justify-content: start;">
           <div class="api-card card shadow-sm text-center p-3">
             <h6>Remove Lanes</h6>
             <div class="api-image-container" onclick="toggleApiImage(this)">
