--- a/index.html
+++ b/index.html
@@ -733,10 +733,10 @@
   
 <!-- API Effects -->
 <section id="apis" class="my-5">
-  <h2 class="section-title text-center mb-4">New API Behavior Modifications</h2>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-12">
+  <h2 class="section-title text-center mb-4">API Behavior Modifications</h2>
+<!--   <div class="container-fluid"> -->
+<!--     <div class="row"> -->
+<!--       <div class="col-12"> -->
 
         <!-- Other Vehicle API -->
         <hr>
@@ -896,9 +896,9 @@
           </div>
         </div>
 
-      </div>
-    </div>
-  </div>
+<!--       </div> -->
+<!--     </div> -->
+<!--   </div> -->
 </section>
 
   <footer class="mt-5">
