--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
     <!-- Aggressive Style -->
     <div class="tab-pane fade show active" id="agg" role="tabpanel" aria-labelledby="agg-tab">
       <div class="video-section">
-        <video controls loop muted class="w-100 mb-3">
+        <video controls loop muted class="w-100 mb-3" style="width: 80%; max-width: 800px; margin: 0 auto;>
           <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/aggressive_hstack_output.mp4" type="video/mp4">
         </video>
         <p class="text-center">Aggressive driver speeds through traffic and swerves through lanes.</p>
@@ -433,7 +433,7 @@
     <!-- Tired Style -->
     <div class="tab-pane fade" id="tired" role="tabpanel" aria-labelledby="tired-tab">
       <div class="video-section">
-        <video controls loop muted class="w-100 mb-3">
+        <video controls loop muted class="w-100 mb-3"">
           <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/tired_hstack_output.mp4" type="video/mp4">
         </video>
         <p class="text-center">Driver shows signs of fatigue and reduced attentiveness.</p>
@@ -479,7 +479,7 @@
         <h5 class="card-title">Case 1: Aggressive Driving-Induced Collision</h5>
         <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/CaseStudy_agg.png" alt="Aggressive Driving-Induced Collision" class="img-fluid mb-3 accident-img">
         <p><strong>Description:</strong> At an intersection, an aggressive Jeep in the left lane abruptly cuts into the AV’s right lane to turn. The AV mispredicts the Jeep’s intent, expecting it to yield.  However, the Jeep, perceiving the AV as moving slowly and posing minimal risk (as seen in the Impact BEV), executes a sudden lane change, resulting in a collision. This highlights the AV’s difficulty in anticipating aggressive maneuvers and underscores the need for improved risk-aware decision-making.<br>
-          <strong>Similar with real world acciden case:</strong> NHTSA: 2005009501684. https://crashviewer.nhtsa.dot.gov/nass-NMVCCS/CaseForm.aspx?xsl=main.xsl&CaseID=2005009501684</p>
+          <strong>Similar with real world acciden case:</strong> <a href="https://crashviewer.nhtsa.dot.gov/nass-NMVCCS/CaseForm.aspx?xsl=main.xsl&CaseID=2005009501684> NHTSA: 2005009501684</a></p>
       </div>
     </div>
 
@@ -489,7 +489,7 @@
         <h5 class="card-title">Case 2: Fatigue-Induced Rear-End Collision</h5>
         <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/CaseStudy_fai.png" alt="Fatigue-Induced Rear-End Collision" class="img-fluid mb-3 accident-img">
         <p><strong>Description:</strong> A fatigued driver in a yellow benz rear-ends the AV due to delayed reaction time. When a police car suddenly changes lanes, the cautious AV performs an emergency stop. However, the fatigued Mercedes misperceives the AV’s position and braking intent due to cognitive delay in Impact BEV perception, leading to a late response and an unavoidable rear-end crash. This exposes the AV’s vulnerability to erratic human behavior, like fatigue.<br>
-          <strong>Similar with real world acciden case:</strong> a href="https://crashviewer.nhtsa.dot.gov/nass-NMVCCS/CaseForm.aspx?xsl=main.xsl&CaseID=2005041508481"> NHTSA: 2005041508481</a></p>
+          <strong>Similar with real world acciden case:</strong> <a href="https://crashviewer.nhtsa.dot.gov/nass-NMVCCS/CaseForm.aspx?xsl=main.xsl&CaseID=2005041508481"> NHTSA: 2005041508481</a></p>
       </div>
     </div>
 
@@ -499,7 +499,7 @@
         <h5 class="card-title">Case 3: Distracted Driving-Induced Side Collision</h5>
         <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/CaseStudy_dis.png" alt="Distracted Driving-Induced Side Collision" class="img-fluid mb-3 accident-img">
         <p><strong>Description:</strong> A distracted driver in an orange Carlarmotor collides with the AV while changing lanes. The distracted driver, engaged in an unrelated task (e.g., using a mobile phone), misjudging its position due to delayed situational awareness (Impact BEV perception delay). As a result, the Carlarmotor initiates a right-lane change, assuming the AV is farther behind than it actually is, leading to a direct side collision. This highlights the risks of distraction and the need for AVs to predict human attention lapses.<br>
-          <strong>Similar with real world acciden case:</strong> <a href="https://crashviewer.nhtsa.dot.gov/nass-NMVCCS/CaseForm.aspx?xsl=main.xsl&CaseID=2007045403168"NHTSA: 2007045403168</a></p>
+          <strong>Similar with real world acciden case:</strong> <a href="https://crashviewer.nhtsa.dot.gov/nass-NMVCCS/CaseForm.aspx?xsl=main.xsl&CaseID=2007045403168"> NHTSA: 2007045403168</a></p>
       </div>
     </div>
   </div>
