--- a/index.html
+++ b/index.html
@@ -388,6 +388,12 @@
   <!-- Driving Styles -->
 <section id="styles" class="my-5" data-aos="fade-up">
   <h2 class="section-title text-center">Driving Styles Sim Demos</h2>
+  <p class="text-center">
+    以下demo视频大多主要包括4部分，最左侧的部分是carla中真实的带风格驾驶的车辆的carla record视频；
+    中间上部分的两部分BEV视频是记录的带风格车辆的BEV图片，BEV视频中左侧视频为驾驶员感知到的主观的BEV，而右侧视频为经过LLM根据驾驶场景自动施加驾驶风格影响后的主观BEV；
+    中间下部分是每次生成或调整驾驶行为时的驾驶环境信息，主要可能为长期的交通信息和短期的Current、past and near-future traffic context
+    最右侧的视频部分是LLM每次生成和调整时调用给定APIs所产生的感知影响代码。
+  </p>
 
   <!-- Tabs -->
   <ul class="nav nav-pills mb-3 justify-content-center" id="styleTabs" role="tablist">
@@ -407,7 +413,7 @@
       <a class="nav-link" id="drunk-tab" data-bs-toggle="pill" href="#drunk" role="tab" aria-controls="drunk" aria-selected="false">Drunk Style</a>
     </li>
   </ul>
-
+  
   <!-- Tab Content -->
   <div class="tab-content" id="styleTabsContent">
     <!-- Aggressive Style -->
@@ -416,7 +422,7 @@
         <video controls loop muted class="w-100 mb-3" style="width: 80%; max-width: 800px; margin: 0 auto;>
           <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/aggressive_hstack_output.mp4" type="video/mp4">
         </video>
-        <p class="text-center">Aggressive driver speeds through traffic and swerves through lanes.</p>
+        <p class="text-center">Aggressive driver speeds through traffic and swerves through lanes. 激进驾驶员在长期的驾驶过程中习惯性低估周围交通要素的风险程度，导致其常常做出 - 随意驾驶，如随意的车道偏移、随意变道，过车距离过近等激进行为。</p>
       </div>
     </div>
 
@@ -426,7 +432,7 @@
         <video controls loop muted class="w-100 mb-3">
           <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/cautious_hstack_output.mp4" type="video/mp4">
         </video>
-        <p class="text-center">Very cautious driver, maintaining a safe distance at all times.</p>
+        <p class="text-center">Very cautious driver, maintaining a safe distance at all times. 谨慎驾驶员在长期的驾驶过程中习惯性高估周围交通要素的风险程度，导致其常常做出 - 频繁刹车，维持过大的安全距离。</p>
       </div>
     </div>
 
@@ -436,7 +442,7 @@
         <video controls loop muted class="w-100 mb-3"">
           <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/tired_hstack_output.mp4" type="video/mp4">
         </video>
-        <p class="text-center">Driver shows signs of fatigue and reduced attentiveness.</p>
+        <p class="text-center">Driver shows signs of fatigue and reduced attentiveness. 疲劳驾驶员在长期的驾驶过程中随着疲劳程度的递增，逐渐经历稳定风格到不稳定风格的转变。该视频只展示了稳定风格的状态，不稳定风格状态类似于醉酒驾驶风格。疲劳驾驶员在稳定驾驶风格状态时由于其疲劳的特点，常常于注意力不集中、注意力回复和注意力过度集中之间切换，因此在正常驾驶期间，会常常出现突然低估周围交通要素风险或高估周围交通要素风险的情况。</p>
       </div>
     </div>
 
@@ -450,7 +456,7 @@
           <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/tellphone_2_hstack_output.mp4" type="video/mp4">
         </video>
       </div>
-      <p class="text-center">Driver distracted by phone while driving.</p>
+      <p class="text-center">Driver distracted by phone while driving. 分心驾驶员在长期的驾驶过程中常常出现场景认知延迟的情况，即认为当前场景保持了过去某个时刻的场景一致没变，认知延迟时间又文中的公式模拟。分心驾驶员常常表现出因为分心驶出车道，或者忽视了周围的交通要素</p>
     </div>
 
     <!-- Drunk Style -->
@@ -459,7 +465,7 @@
         <video controls loop muted class="w-100 mb-3">
           <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/drunk_hstack_output.mp4" type="video/mp4">
         </video>
-        <p class="text-center">Driver shows erratic behavior indicative of intoxication.</p>
+        <p class="text-center">Driver shows erratic behavior indicative of intoxication. 醉酒驾驶员做典型的不稳定风格的驾驶行为，在长期的驾驶过程中根据短期的交通信息做出突发性行为，常常出现幻觉 - 将直道看成弯道，估计错误周围物体的距离或者凭空觉得周围存在其他物体。</p>
       </div>
     </div>
   </div>
@@ -509,7 +515,8 @@
 <section id="quants" class="my-5" data-aos="fade-up">
   <h2 class="section-title text-center">Quantitative Results</h2>
   <p class="text-center">We present the numerical evaluation of different driver behavior models across standard metrics. 
-    Traffic Style(TS), Driving Score(DS), Route Completion(RC). </p>
+    我们展示了被测车为Interfuser模型时，不同交通风格（驾驶环境内30辆车全为某种风格）对被测车的驾驶能力的影响；以及不同驾驶模型不危险程度不同的驾驶风格组合的交通风格环境下的驾驶能力
+    <br>Traffic Style(TS), Driving Score(DS), Route Completion(RC). </p>
   
   <div class="table-responsive">
     <table class="table table-bordered table-hover text-center"  style="margin: 0 auto; width: 85%; max-width: 1000px;">
@@ -617,7 +624,11 @@
 <!-- Ablation Study -->
 <section id="ablations" class="my-5" data-aos="fade-up">
   <h2 class="section-title text-center">Ablation Study</h2>
-  <p class="text-center">To validate the effectiveness of each component, we conduct ablation experiments on key LLM-driven modules.</p>
+  <p class="text-center">
+    To validate the effectiveness of each component, we conduct ablation experiments on key LLM-driven modules.
+    为了验证本文的驾驶风格对驾驶仿真agent中的驾驶专家模型的基本驾驶能力的干扰能力，以及验证Multi-level Dimensionality Reduction Strategy（MDRS） of our Perception-Driven Style-to-015
+Behavior Transformation（P-B2ST） schema 
+  </p>
 
   <!-- Ablation Table -->
   <div class="table-responsive mb-4">
@@ -672,7 +683,7 @@
   <!-- Ablation Visualization -->
   <div class="row justify-content-center">
     <div class="col-md-10 col-lg-8 text-center mb-4">
-      <h5><strong>Multi-Level Dimensionality Reduction Strategy Study</strong></h5>
+      <h5><strong>Multi-Level Dimensionality Reduction Strategy Validation</strong></h5>
       <img 
         src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/Trajectory_validation.png" 
         alt="Framework Overview" 
